--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,14 @@
 # Copy from .env.local on the Vercel dashboard
 # https://nextjs.org/learn/dashboard-app/setting-up-your-database#create-a-postgres-database
-POSTGRES_URL=
-POSTGRES_PRISMA_URL=
-POSTGRES_URL_NON_POOLING=
-POSTGRES_USER=
-POSTGRES_HOST=
-POSTGRES_PASSWORD=
-POSTGRES_DATABASE=
+POSTGRES_URL=postgres://neondb_owner:npg_zPZAN8JS3ect@ep-polished-hat-a1y98dky-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require
+POSTGRES_PRISMA_URL=postgres://neondb_owner:npg_zPZAN8JS3ect@ep-polished-hat-a1y98dky-pooler.ap-southeast-1.aws.neon.tech/neondb?connect_timeout=15&sslmode=require
+POSTGRES_URL_NON_POOLING=postgres://neondb_owner:npg_zPZAN8JS3ect@ep-polished-hat-a1y98dky.ap-southeast-1.aws.neon.tech/neondb?sslmode=require
+POSTGRES_PASSWORD=npg_zPZAN8JS3ect
+POSTGRES_DATABASE=neondb
+POSTGRES_HOST=ep-polished-hat-a1y98dky-pooler.ap-southeast-1.aws.neon.tech
+POSTGRES_USER=neondb_owner
 
 # `openssl rand -base64 32`
 AUTH_SECRET=
 AUTH_URL=http://localhost:3000/api/auth
+
